--- a/pom.xml
+++ b/pom.xml
@@ -300,6 +300,13 @@ AllTests)
           <target>1.3</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <goals>source:jar javadoc:jar deploy site:deploy</goals>
+        </configuration>
+      </plugin>
 <!-- TODO: add cobertura and other plugins that would fail the build, like PMD, cobertura and checkstyle-->
     </plugins>
   </build>
