--- a/pom.xml
+++ b/pom.xml
@@ -304,7 +304,7 @@ AllTests)
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
-          <goals>source:jar javadoc:jar deploy site:deploy</goals>
+          <goals>source:jar javadoc:jar deploy site:deploy repository:bundle-create</goals>
         </configuration>
       </plugin>
 <!-- TODO: add cobertura and other plugins that would fail the build, like PMD, cobertura and checkstyle-->
