--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.dbunit</groupId>
   <artifactId>dbunit</artifactId>
   <packaging>jar</packaging>
-  <version>2.2-SNAPSHOT</version>
+  <version>2.2</version>
   <name>DbUnit Framework</name>
   <url>http://dbunit.sourceforge.net</url>
 <!-- TODO - stuff below changed on M2; I think it went to Site plugin
@@ -26,9 +26,9 @@
     </license>
   </licenses>
   <scm> 
-    <connection>scm:svn:https://svn.sourceforge.net/svnroot/dbunit/trunk/</connection>
-    <developerConnection>scm:svn:https://svn.sourceforge.net/svnroot/dbunit/trunk/</developerConnection>
-    <url>http://dbunit.cvs.sourceforge.net/dbunit</url>
+    <connection>scm:svn:https://svn.sourceforge.net/svnroot/dbunit/tags/dbunit-2.2</connection>
+    <developerConnection>scm:svn:https://svn.sourceforge.net/svnroot/dbunit/tags/dbunit-2.2</developerConnection>
+    <url>http://dbunit.cvs.sourceforge.net/dbunit/tags/dbunit-2.2</url>
   </scm>
   <issueManagement>
     <system>SourceForge</system>
