--- a/pom.xml
+++ b/pom.xml
@@ -335,7 +335,7 @@ AllTests)
             <toAddress implementation="java.lang.String">dbunit-developer@lists.sourceforge.net</toAddress>
             <toAddress implementation="java.lang.String">dbunit-user@lists.sourceforge.net</toAddress>
           </toAddresses>
-          <urlDownload>http://sourceforge.net/project/showfiles.php?group_id=47439&amp;release_id=242511</urlDownload>
+          <urlDownload>http://sourceforge.net/project/showfiles.php?group_id=47439</urlDownload>
           <issueLinkTemplate>%URL%?func=detail&amp;aid=%ISSUE%&amp;group_id=47439&amp;atid=449494</issueLinkTemplate>
         </configuration>
         <reportSets>
