--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,7 @@
     
     <dependency>
      <groupId>org.slf4j</groupId>
-     <artifactId>slf4j-simple</artifactId>
+     <artifactId>slf4j-nop</artifactId>
      <version>1.4.3</version>
      <scope>test</scope>
     </dependency>
