--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.dbunit</groupId>
   <artifactId>dbunit</artifactId>
   <packaging>jar</packaging>
-  <version>2.2.1</version>
+  <version>2.2.2-SNAPSHOT</version>
   <name>DbUnit Framework</name>
   <url>http://dbunit.sourceforge.net</url>
 <!-- TODO - stuff below changed on M2; I think it went to Site plugin
@@ -26,9 +26,9 @@
     </license>
   </licenses>
   <scm> 
-    <connection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/tags/release-2-2-1</connection>
-    <developerConnection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/tags/release-2-2-1</developerConnection>
-    <url>http://dbunit.svn.sourceforge.net/svnroot/dbunit/tags/release-2-2-1</url>
+    <connection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</connection>
+    <developerConnection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</developerConnection>
+    <url>http://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</url>
   </scm>
   <issueManagement>
     <system>SourceForge</system>
