--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.dbunit</groupId>
     <artifactId>dbunit</artifactId>
     <packaging>jar</packaging>
-    <version>2.2.2-SNAPSHOT</version>
+    <version>2.2.2</version>
     <name>DbUnit Framework</name>
     <url>http://dbunit.sourceforge.net</url>
     <inceptionYear>2002</inceptionYear>
@@ -19,9 +19,9 @@
         </license>
     </licenses>
     <scm> 
-        <connection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</connection>
-        <developerConnection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</developerConnection>
-        <url>http://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</url>
+        <connection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/tags/release-2.2.2</connection>
+        <developerConnection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/tags/release-2.2.2</developerConnection>
+        <url>http://dbunit.svn.sourceforge.net/svnroot/dbunit/tags/release-2.2.2</url>
     </scm>
     <issueManagement>
         <system>SourceForge</system>
