--- a/pom.xml
+++ b/pom.xml
@@ -325,16 +325,6 @@ AllTests)
                     <goals>source:jar javadoc:jar deploy site:site site:deploy changes:announcement-generate</goals>
                 </configuration>
             </plugin>
-            <!-- TODO: add cobertura and other plugins that would fail the build, like PMD, cobertura and checkstyle-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
-                <configuration>
-                    <source>1.3</source>
-                    <target>1.3</target>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -376,17 +366,17 @@ AllTests)
 
     <distributionManagement>
         <snapshotRepository>
-            <id>sf_snapshots</id>
+            <id>sourceforge</id>
             <name>SourceForge Snapshots Repo</name>
             <url>scp://shell.sourceforge.net/home/groups/d/db/dbunit/htdocs/repo/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>sf_official</id>
+            <id>sourceforge</id>
             <name>SourceForge Releases Repo</name>
             <url>scp://shell.sourceforge.net/home/groups/d/db/dbunit/htdocs/repo/official</url>
         </repository>
         <site>
-            <id>sf_website</id>
+            <id>sourceforge</id>
             <url>scp://shell.sourceforge.net/home/groups/d/db/dbunit/htdocs</url>
         </site>
     </distributionManagement>   
