[ 1925603 ] Removed redundant and erroneous (i.e. ones that should be disregarded) ERROR logging messages.

--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
             </roles>
         </developer>
         <developer>
-            <name>Sebastien Le Callonec</name>
+            <name>Sebastien Le Callonnec</name>
             <id>slecallonnec</id>
             <email>slecallonnec@users.sourceforge.net</email>
             <roles>
