Fixed broken link for jxr report plugin in site.xml

--- a/pom.xml
+++ b/pom.xml
@@ -476,6 +476,9 @@ AllTests)
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-jxr-plugin</artifactId>
+						<configuration>
+							<!--<stylesheet>"${basedir}/myStyles.css"</stylesheet>-->
+						</configuration>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
