--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	<properties>
+		<compileSource>1.3</compileSource>
+	</properties>
 	<scm> 
 		<connection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</connection>
 		<developerConnection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</developerConnection>
@@ -27,6 +30,24 @@
 		<system>SourceForge</system>
 		<url>http://sourceforge.net/tracker/?group_id=47439</url>
 	</issueManagement>
+	<ciManagement>
+		<system>parabuild</system>
+		<url><![CDATA[
+			http://parabuild.viewtier.com:8080/parabuild/index.htm?view=detailed&buildid=30
+		]]></url>
+		<notifiers>
+			<notifier>
+				<type>mail</type>
+				<sendOnError>true</sendOnError>
+				<sendOnFailure>false</sendOnFailure>
+				<sendOnSuccess>false</sendOnSuccess>
+				<sendOnWarning>false</sendOnWarning>
+				<configuration>
+					<address>gommma@users.sourceforge.net</address>
+				</configuration>
+			</notifier>
+		</notifiers>
+	</ciManagement>
 	<mailingLists>
 		<mailingList>
 			<name>DbUnit User List</name>
@@ -330,8 +351,8 @@ AllTests)
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.3</source>
-					<target>1.3</target>
+					<source>${compileSource}</source>
+					<target>${compileSource}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -383,6 +404,30 @@ AllTests)
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
+			</plugin>
+<!--			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+			</plugin>-->
+			<!-- Generate "PMD" and "CPD" reports -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<configuration>
+					<linkXref>true</linkXref>
+					<sourceEncoding>utf-8</sourceEncoding>
+					<minimumTokens>100</minimumTokens>
+					<targetJdk>${compileSource}</targetJdk>
+				</configuration>
+			</plugin>
+			<!-- Generate "JDepend" report -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jdepend-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
