--- a/profile.properties
+++ b/profile.properties
@@ -7,6 +7,7 @@ dbunit.profile = hypersonic
 #dbunit.profile = mysql
 #dbunit.profile = mssql
 #dbunit.profile = db2
+#dbunit.profile = derbyembedded
 
 # dbunit.profile.{profileName}.driverClass = com.acme.driver
 # dbunit.profile.{profileName}.connectionUrl = jdbc:acme:database
@@ -50,6 +51,15 @@ dbunit.profile.db2.schema =
 dbunit.profile.db2.user = 
 dbunit.profile.db2.password = 
 dbunit.profile.db2.unsupportedFeatures = 
+
+dbunit.profile.derbyembedded.driverClass = org.apache.derby.jdbc.EmbeddedDriver
+#dbunit.profile.derbyembedded.connectionUrl = jdbc\:derby\:D\:\\TMP\\derby\\derby_db;create\=true
+dbunit.profile.derbyembedded.connectionUrl = jdbc\:derby\:target\/derby_db;create\=true
+dbunit.profile.derbyembedded.schema = APP
+dbunit.profile.derbyembedded.user = APP
+dbunit.profile.derbyembedded.password = APP
+dbunit.profile.derbyembedded.unsupportedFeatures = BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
+
 
 ## Needed for ant testing until profile.properties is merged
 dbunit.profile.driverClass = ${dbunit.profile.hypersonic.driverClass}
