[ 2012495 ] Add: DbUnit is only JDK 1.4 compatible and not 1.3 (as claimed until now). Several methods are in use that did not exist in JDK 1.3. To build with JDK 1.4 and maven it is now required to set the environment variable JAVA_1_4_HOME to your JDK 1.4 home directory

--- a/profile.properties
+++ b/profile.properties
@@ -58,7 +58,7 @@ dbunit.profile.derbyembedded.connectionUrl = jdbc\:derby\:target\/derby_db;creat
 dbunit.profile.derbyembedded.schema = APP
 dbunit.profile.derbyembedded.user = APP
 dbunit.profile.derbyembedded.password = APP
-dbunit.profile.derbyembedded.unsupportedFeatures = BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
+dbunit.profile.derbyembedded.unsupportedFeatures = VARBINARY,BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
 
 
 ## Needed for ant testing until profile.properties is merged
