--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		</license>
 	</licenses>
 	<properties>
-		<compileSource>1.3</compileSource>
+		<compileSource>1.4</compileSource>
 	</properties>
 	<scm> 
 		<connection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</connection>
@@ -360,6 +360,10 @@ AllTests)
 				<configuration>
 					<source>${compileSource}</source>
 					<target>${compileSource}</target>
+					<compilerVersion>${compileSource}</compilerVersion>
+					<executable>${JAVA_1_4_HOME}/bin/javac</executable>
+					<debug>true</debug>
+					<fork>true</fork>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -455,6 +459,7 @@ AllTests)
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changes-plugin</artifactId>
+                <version>2.0</version>
 				<configuration>
 					<smtpHost>localhost</smtpHost>
 					<smtpPort implementation="java.lang.Integer">25</smtpPort>
