--- a/pom.xml
+++ b/pom.xml
@@ -411,6 +411,13 @@ AllTests)
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<configuration>
+					<!--<stylesheet>"${basedir}/myStyles.css"</stylesheet>-->
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 			</plugin>
 			<plugin>
@@ -520,9 +527,12 @@ AllTests)
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-compiler-plugin</artifactId>
 							<configuration>
+								<source>${compileSource}</source>
+								<target>${compileSource}</target>
+								<compilerVersion>${compileSource}</compilerVersion>
+								<executable>${JAVA_1_4_HOME}/bin/javac</executable>
+								<debug>true</debug>
 								<fork>true</fork>
-								<compilerVersion>1.3</compilerVersion>
-								<executable>${JAVA_1_3_HOME}/bin/javac</executable>
 							</configuration>
 						</plugin>
 					</plugins>
