--- a/pom.xml
+++ b/pom.xml
@@ -427,11 +427,14 @@ AllTests)
 <!--			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-			</plugin>
+			</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-			</plugin>-->
+				<configuration>
+						<configLocation>checkstyle.xml</configLocation>
+				</configuration>
+			</plugin>
 			<!-- Generate "PMD" and "CPD" reports -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
