Improvements to the checkstyle configuration: - exclude "util/concurrent" folder from check because it is external - activated the "AvoidStarImport" and replaced all *-imports in the code by concrete imports - activated other "import"-related checks

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	</licenses>
 	<properties>
 		<compileSource>1.4</compileSource>
+		<checkstyle.excludes>org/dbunit/util/concurrent/*.java</checkstyle.excludes>
 	</properties>
 	<scm> 
 		<connection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk</connection>
