--- a/pom.xml
+++ b/pom.xml
@@ -246,11 +246,6 @@
 			<version>3.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.1</version>
-		</dependency>
-		<dependency>
 			<groupId>mockobjects</groupId>
 			<artifactId>mockobjects-core</artifactId>
 			<version>0.07</version>  
@@ -274,14 +269,21 @@
 			<groupId>hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>1.8.0.1</version>      
-			<scope>test</scope>   
+			<scope>test</scope>
 		</dependency>       
 		<dependency>
 			<!-- Only needed when "profile.properties" is set to "derby" environment -->
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 			<version>10.4.1.3</version>      
-			<scope>test</scope>   
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>gsbase</groupId>
+		    <artifactId>gsbase</artifactId>
+		    <version>2.0.1</version>
+            <scope>test</scope>
 		</dependency>
 
 		<dependency>
