added Xmx/Xms to the checkstyle plugin so that OutOfMemory does not occur anymore

--- a/pom.xml
+++ b/pom.xml
@@ -436,6 +436,7 @@ AllTests)
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<configuration>
 						<configLocation>checkstyle.xml</configLocation>
+			            <argLine>-Xmx512m -Xms128m</argLine>
 				</configuration>
 			</plugin>
 			<!-- Generate "PMD" and "CPD" reports -->
