--- a/pom.xml
+++ b/pom.xml
@@ -220,17 +220,16 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.2</version>
 		</dependency>
-
-		<dependency>
-			<groupId>junit-addons</groupId>
-			<artifactId>junit-addons</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.2-FINAL</version>
-		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+        <dependency>  
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
 		<dependency>
 			<groupId>ant</groupId>
 			<artifactId>ant</artifactId>
@@ -239,16 +238,24 @@
 -->      
 			<version>1.5.4</version>
 			<optional>true</optional>
-		</dependency>  
-		<dependency>  
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.2-FINAL</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>junit-addons</groupId>
+            <artifactId>junit-addons</artifactId>
+            <version>1.4</version>
+            <scope>test</scope>   
+        </dependency>
 		<dependency>
 			<groupId>mockobjects</groupId>
 			<artifactId>mockobjects-core</artifactId>
-			<version>0.07</version>  
+			<version>0.07</version>
 			<scope>test</scope>   
 		</dependency>       
 		<dependency>
@@ -264,7 +271,6 @@
 			<version>0.07</version>
 			<scope>test</scope>   
 		</dependency>
-
 		<dependency>
 			<groupId>hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
@@ -278,7 +284,6 @@
 			<version>10.4.1.3</version>      
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 		    <groupId>gsbase</groupId>
 		    <artifactId>gsbase</artifactId>
@@ -288,14 +293,8 @@
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.4.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-nop</artifactId>
-			<version>1.4.3</version>
+			<version>1.5.6</version>
 			<scope>runtime</scope>
 		</dependency>
 
