--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.dbunit</groupId>
 	<artifactId>dbunit</artifactId>
 	<packaging>jar</packaging>
-	<version>2.4.1-SNAPSHOT</version>
+	<version>2.4.1</version>
 	<name>DbUnit Framework</name>
 	<url>http://dbunit.sourceforge.net</url>
 	<inceptionYear>2002</inceptionYear>
