--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,7 @@
 			<artifactId>slf4j-nop</artifactId>
 			<version>1.5.6</version>
 			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
 
 	</dependencies>
