--- a/pom.xml
+++ b/pom.xml
@@ -226,7 +226,7 @@
     <dependency>
       <groupId>ant</groupId>
       <artifactId>ant</artifactId>
-      <version>[1.5.4,2.0.0)</version>
+      <version>1.5.4</version>
       <optional>true</optional>
     </dependency>
     <dependency>
