updated my (Felipe) info

--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,8 @@
       <name>Felipe Leme</name>
       <id>felipeal</id>
       <email>dbunit@felipeal.net</email>
-      <organization>Falcon Informatica</organization>
-      <timezone>-3</timezone>
+      <organization>GoldenGate Software</organization>
+      <timezone>-8</timezone>
       <roles>
         <role>Java Developer</role>
       </roles>
