[ 2783531 ] - Support for UUID data type (Feature request)

--- a/pom.xml
+++ b/pom.xml
@@ -297,7 +297,12 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
-
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>8.3-603.jdbc4</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
