--- a/pom.xml
+++ b/pom.xml
@@ -367,7 +367,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
-          <goals>javadoc:javadoc source:jar javadoc:jar deploy site changes:announcement-generate assembly:assembly</goals>
+          <goals>javadoc:javadoc site changes:announcement-generate assembly:assembly deploy</goals>
         </configuration>
       </plugin>
       <plugin>
