--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
+        <version>2.0-beta-9</version>
         <configuration>
           <goals>javadoc:javadoc site changes:announcement-generate assembly:assembly deploy</goals>
         </configuration>
