--- a/pom.xml
+++ b/pom.xml
@@ -369,7 +369,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.0-beta-9</version>
         <configuration>
-          <goals>javadoc:javadoc site changes:announcement-generate assembly:assembly deploy</goals>
+          <goals>javadoc:javadoc site changes:announcement-generate assembly:assembly javadoc:jar source:jar deploy</goals>
         </configuration>
       </plugin>
       <plugin>
