--- a/profile.properties
+++ b/profile.properties
@@ -28,7 +28,7 @@ dbunit.profile.oracle.connectionUrl = jdbc:oracle:thin:@demowin:1521:demowin
 dbunit.profile.oracle.schema = DBUNIT
 dbunit.profile.oracle.user = dbunit
 dbunit.profile.oracle.password = dbunit
-dbunit.profile.oracle.unsupportedFeatures = INSERT_INDENTITY
+dbunit.profile.oracle.unsupportedFeatures = INSERT_IDENTITY
 
 dbunit.profile.mysql.driverClass = com.mysql.jdbc.Driver
 dbunit.profile.mysql.connectionUrl = jdbc:mysql://localhost:3306/dbunit
@@ -45,12 +45,12 @@ dbunit.profile.mssql.user = dbunit
 dbunit.profile.mssql.password = dbunit
 dbunit.profile.mssql.unsupportedFeatures = BLOB,CLOB,SCOLLABLE_RESULTSET
 
-dbunit.profile.db2.driverClass = 
-dbunit.profile.db2.connectionUrl = 
-dbunit.profile.db2.schema = 
-dbunit.profile.db2.user = 
-dbunit.profile.db2.password = 
-dbunit.profile.db2.unsupportedFeatures = 
+dbunit.profile.db2.driverClass =
+dbunit.profile.db2.connectionUrl =
+dbunit.profile.db2.schema =
+dbunit.profile.db2.user =
+dbunit.profile.db2.password =
+dbunit.profile.db2.unsupportedFeatures =
 
 dbunit.profile.derbyembedded.driverClass = org.apache.derby.jdbc.EmbeddedDriver
 #dbunit.profile.derbyembedded.connectionUrl = jdbc\:derby\:D\:\\TMP\\derby\\derby_db;create\=true
@@ -67,6 +67,12 @@ dbunit.profile.connectionUrl = ${dbunit.profile.hypersonic.connectionUrl}
 #dbunit.profile.schema = ${dbunit.profile.hypersonic.schema}
 dbunit.profile.user = ${dbunit.profile.hypersonic.user}
 dbunit.profile.password = ${dbunit.profile.hypersonic.password}
+
+#dbunit.profile.driverClass = ${dbunit.profile.oracle.driverClass}
+#dbunit.profile.connectionUrl = ${dbunit.profile.oracle.connectionUrl}
+#dbunit.profile.schema = ${dbunit.profile.oracle.schema}
+#dbunit.profile.user = ${dbunit.profile.oracle.user}
+#dbunit.profile.password = ${dbunit.profile.oracle.password}
 
 #dbunit.profile.driverClass = ${dbunit.profile.mysql.driverClass}
 #dbunit.profile.connectionUrl = ${dbunit.profile.mysql.connectionUrl}
