[2875235] - Corrected SCOLLABLE_RESULTSET to SCROLLABLE_RESULTSET.  I trust that this public identifier is not used outside of DbUnit itself.

--- a/profile.properties
+++ b/profile.properties
@@ -14,14 +14,14 @@ dbunit.profile = hypersonic
 # dbunit.profile.{profileName}.schema =
 # dbunit.profile.{profileName}.user =
 # dbunit.profile.{profileName}.password =
-# dbunit.profile.{profileName}.unsupportedFeatures = BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_INDENTITY,TRUNCATE_TABLE
+# dbunit.profile.{profileName}.unsupportedFeatures = BLOB,CLOB,TRANSACTION,SCROLLABLE_RESULTSET,INSERT_INDENTITY,TRUNCATE_TABLE
 
 dbunit.profile.hypersonic.driverClass = org.hsqldb.jdbcDriver
 dbunit.profile.hypersonic.connectionUrl = jdbc:hsqldb:mem:.
 dbunit.profile.hypersonic.schema = PUBLIC
 dbunit.profile.hypersonic.user = sa
 dbunit.profile.hypersonic.password =
-dbunit.profile.hypersonic.unsupportedFeatures = BLOB,CLOB,SCOLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
+dbunit.profile.hypersonic.unsupportedFeatures = BLOB,CLOB,SCROLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
 
 dbunit.profile.oracle.driverClass = oracle.jdbc.driver.OracleDriver
 dbunit.profile.oracle.connectionUrl = jdbc:oracle:thin:@demowin:1521:demowin
@@ -43,7 +43,7 @@ dbunit.profile.mssql.connectionUrl = jdbc:microsoft:sqlserver://localhost\\dbuni
 dbunit.profile.mssql.schema = dbo
 dbunit.profile.mssql.user = dbunit
 dbunit.profile.mssql.password = dbunit
-dbunit.profile.mssql.unsupportedFeatures = BLOB,CLOB,SCOLLABLE_RESULTSET
+dbunit.profile.mssql.unsupportedFeatures = BLOB,CLOB,SCROLLABLE_RESULTSET
 
 dbunit.profile.db2.driverClass =
 dbunit.profile.db2.connectionUrl =
@@ -58,7 +58,7 @@ dbunit.profile.derbyembedded.connectionUrl = jdbc\:derby\:target\/derby_db;creat
 dbunit.profile.derbyembedded.schema = APP
 dbunit.profile.derbyembedded.user = APP
 dbunit.profile.derbyembedded.password = APP
-dbunit.profile.derbyembedded.unsupportedFeatures = VARBINARY,BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
+dbunit.profile.derbyembedded.unsupportedFeatures = VARBINARY,BLOB,CLOB,TRANSACTION,SCROLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
 
 
 ## Needed for ant testing until profile.properties is merged
